install three.js, add skills

--- a/apps/three/package.json
+++ b/apps/three/package.json
@@ -11,9 +11,12 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@react-three/fiber": "^9.5.0",
     "@repo/ui": "*",
+    "@types/three": "^0.182.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
