--- a/apps/three/package.json
+++ b/apps/three/package.json
@@ -11,12 +11,16 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.5.0",
     "@repo/ui": "*",
     "@types/three": "^0.182.0",
+    "leva": "^0.10.1",
+    "maath": "^0.10.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "three": "^0.182.0"
+    "three": "^0.182.0",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
