--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types"
   },
+  "dependencies": {
+    "uuid": "^11.0.3"
+  },
   "devDependencies": {
     "prettier": "^3.7.4",
     "turbo": "^2.8.1",
